--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,13 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.1.6.RELEASE (2019-04-01)
+---------------------------------------------
+* DATACOUCH-434 - Add reactive repository asciidoc on index link.
+* DATACOUCH-432 - Fix ANSI Joins OneToOne relationship.
+* DATACOUCH-430 - Release 3.1.6 (Lovelace SR6).
+
+
 Changes in version 3.0.14.RELEASE (2019-04-01)
 ----------------------------------------------
 * DATACOUCH-434 - Add reactive repository asciidoc on index link.
