--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.1.7.RELEASE (2019-05-10)
+---------------------------------------------
+* DATACOUCH-443 - Release 3.1.7 (Lovelace SR7).
+
+
 Changes in version 3.2.0.M3 (2019-04-11)
 ----------------------------------------
 * DATACOUCH-438 - Move off deprecations in Spring Data Commons.
