--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.2.21.RELEASE (2019-05-10)
+----------------------------------------------
+* DATACOUCH-441 - Release 2.2.21 (Ingalls SR21).
+
+
 Changes in version 3.1.7.RELEASE (2019-05-10)
 ---------------------------------------------
 * DATACOUCH-443 - Release 3.1.7 (Lovelace SR7).
