--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.2.22.RELEASE (2019-05-13)
+----------------------------------------------
+* DATACOUCH-448 - Release 2.2.22 (Ingalls SR22).
+
+
 Changes in version 3.1.8.RELEASE (2019-05-13)
 ---------------------------------------------
 * DATACOUCH-447 - Release 3.1.8 (Lovelace SR8).
