--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,15 @@
-[![Spring Data Couchbase](https://spring.io/badges/spring-data-couchbase/ga.svg)](https://projects.spring.io/spring-data-couchbase#quick-start)
-[![Spring Data Couchbase](https://spring.io/badges/spring-data-couchbase/snapshot.svg)](https://projects.spring.io/spring-data-couchbase#quick-start)
+image:https://spring.io/badges/spring-data-couchbase/ga.svg[Spring Data Couchbase,link=https://projects.spring.io/spring-data-couchbase#quick-start]
+image:https://spring.io/badges/spring-data-couchbase/snapshot.svg[Spring Data Couchbase,link=https://projects.spring.io/spring-data-couchbase#quick-start]
 
-# Spring Data Couchbase 3.0.x
+image:https://jenkins.spring.io/buildStatus/icon?job=spring-data-couchbase%2Fmaster&subject=Moore%20(master)["Spring Data Couchbase", link="https://jenkins.spring
+.io/view/SpringData/job/spring-data-couchbase/"]
+image:https://jenkins.spring.io/buildStatus/icon?job=spring-data-couchbase%2F3.1.x&subject=Lovelace%20(3.1.x)["Spring Data Couchbase", link="https://jenkins.spring
+.io/view/SpringData/job/spring-data-couchbase/"]
+image:https://jenkins.spring.io/buildStatus/icon?job=spring-data-couchbase%2F2.2.x&subject=Ingalls%20(2.2.x)["Spring Data Couchbase", link="https://jenkins.spring
+.io/view/SpringData/job/spring-data-couchbase/"]
+
+= Spring Data Couchbase 3.0.x
+
 `Spring-Data Couchbase 3.0.x` is the Spring Data connector for the `Couchbase Java SDK 2.x` generation.
 
 Both the SDK and this Spring Data community project are major version changes with lots of differences from their
@@ -9,9 +17,9 @@ respective previous versions.
 
 Notably, this version is compatible with `Couchbase Server 4.0`, bringing support for the `N1QL` query language.
 
-# Spring Data Couchbase
+= Spring Data Couchbase
 
-The primary goal of the [Spring Data](https://www.springsource.org/spring-data) project is to make it easier to build
+The primary goal of the https://www.springsource.org/spring-data[Spring Data] project is to make it easier to build
 Spring-powered applications that use new data access technologies such as non-relational databases, map-reduce
 frameworks, and cloud based data services.
 
@@ -24,38 +32,39 @@ Integration tests require a couchbase server with a bucket name "protected" with
 If the server allows users, then an user with username "protected" with "password" as the password should also be set.
 The recommended way to run tests is to install docker and use container in server.properties.
 
-## Getting Help
+== Getting Help
 
 For a comprehensive treatment of all the Spring Data Couchbase features, please refer to:
 
-* the [User Guide](https://docs.spring.io/spring-data/couchbase/docs/current/reference/html/) for the current GA version.
-* the [JavaDocs](https://docs.spring.io/spring-data/couchbase/docs/current/api/) have extensive comments
-  in them as well.
-* for more detailed questions, use the [StackOverflow `spring-data-couchbase` tag](https://stackoverflow.com/questions/tagged/spring-data-couchbase)
-or Couchbase's own [forums](https://forums.couchbase.com/c/java-sdk).
+* the https://docs.spring.io/spring-data/couchbase/docs/current/reference/html/[User Guide] for the current GA version.
+* the https://docs.spring.io/spring-data/couchbase/docs/current/api/[JavaDocs] have extensive comments
+ in them as well.
+* for more detailed questions, use the https://stackoverflow.com/questions/tagged/spring-data-couchbase[StackOverflow `spring-data-couchbase` tag]
+or Couchbase's own https://forums.couchbase.com/c/java-sdk[forums].
 
 If you are new to Spring as well as to Spring Data, look for information about
-[Spring projects](https://www.springsource.org/projects).
+https://www.springsource.org/projects[Spring projects].
 
+== Quick Start
 
-## Quick Start
-
-### Maven configuration
+=== Maven configuration
 
 Add the Maven dependency:
 
-```xml
+[source,xml]
+----
 <dependency>
   <groupId>org.springframework.data</groupId>
   <artifactId>spring-data-couchbase</artifactId>
   <version>${version}.RELEASE</version>
 </dependency>
-```
+----
 
 If you'd rather like the latest snapshots of the upcoming major version, use our Maven snapshot repository and declare
 the appropriate dependency version.
 
-```xml
+[source,xml]
+----
 <dependency>
   <groupId>org.springframework.data</groupId>
   <artifactId>spring-data-couchbase</artifactId>
@@ -67,17 +76,17 @@ the appropriate dependency version.
   <name>Spring Snapshot Repository</name>
   <url>https://repo.spring.io/libs-snapshot</url>
 </repository>
-```
+----
 
-### CouchbaseTemplate
+=== CouchbaseTemplate
 
 CouchbaseTemplate is the central support class for Couchbase database operations. It provides:
 
 * Basic POJO mapping support to and from JSON (by default through Jackson)
 * Convenience methods to interact with the store (insert object, update objects) and Couchbase specific ones
-* Exception translation into Spring's [technology agnostic DAO exception hierarchy](https://docs.spring.io/spring/docs/current/spring-framework-reference/html/dao.html#dao-exceptions).
+* Exception translation into Spring's https://docs.spring.io/spring/docs/current/spring-framework-reference/html/dao.html#dao-exceptions[technology agnostic DAO exception hierarchy].
 
-### Spring Data Repositories
+=== Spring Data Repositories
 
 To simplify the creation of data repositories Spring Data Couchbase provides a generic repository programming model. It
 will automatically create a repository proxy for you that adds implementations of finder methods you specify on an
@@ -85,7 +94,8 @@ interface.
 
 To create a repository on top of a `UserInfo` entity, all you need to write is:
 
-```java
+[source,java]
+----
 public interface UserRepository extends CrudRepository<UserInfo, String> {
 
   /**
@@ -106,7 +116,7 @@ public interface UserRepository extends CrudRepository<UserInfo, String> {
   List<UserInfo> findByFirstnameContains(String word);
 
 }
-```
+----
 
 Once you get a reference to that repository bean, you'll find a lot of methods that make it very easy to work with this
 entity. In addition to the ones provided through the `CrudRepository`, you can add your own methods as well.
@@ -114,7 +124,8 @@ entity. In addition to the ones provided through the `CrudRepository`, you can a
 In general, every CRUD method that does not depend on a single key (like `findById`) needs a backing View, `all` on the
 server side (the design document is by default expected to be the uncapitalized name of the entity, like `userInfo`).
 
-## Custom Repository Methods and Views
+== Custom Repository Methods and Views
+
 Finder methods you define, if annotated with `@View`, also are backed by views. Either you want to return all items from
 these views and you can let the method name reflect the view name (like in `findAdults()`, where it'll expect an
 `adults` view), or provide simple criteria (you explicitly specify the `viewName` and let the method name determine your
@@ -126,13 +137,14 @@ production before accessing it.
 
 This is an example view for the `findByLastname` method:
 
-```javascript
+[source,javascript]
+----
 function (doc, meta) {
   if(doc._class == "com.example.entity.UserInfo" && doc.lastname) {
     emit(doc.lastname, null);
   }
 }
-```
+----
 
 If you want to use more query parameters than what is supported through query derivation (see `ViewQueryCreator`), you
 need to provide the implementation of the finder methods yourself and use the underlying `CouchbaseTemplate`.
@@ -140,25 +152,28 @@ need to provide the implementation of the finder methods yourself and use the un
 The `all` view that backs CRUD `findAll()` and `count()` needs to look like this (and do not forget the `_count` reduce
 function):
 
-```javascript
+[source,javascript]
+----
 function (doc, meta) {
   if(doc._class == "com.example.entity.UserInfo") {
     emit(null, null);
   }
 }
-```
+----
 
 Alternatively, if view creation isn't too costly, you can ask the framework to create it automatically by annotating the
-repository with `@ViewIndexed(designDoc = "userInfo", viewName = "all")`.
+repository with `@ViewIndexed(designDoc = &quot;userInfo&quot;, viewName = &quot;all&quot;)`.
 
-## N1QL and Query Derivation
+== N1QL and Query Derivation
+
 With the introduction of `N1QL`, Couchbase can now better support query derivation (the mechanism that allows you to
 add custom methods that will automatically be implemented as a N1QL query derived from the method's name).
 
 This is the default repository query mechanism, so the associated `@Query` annotation is optional. Here is what it looks
 like:
 
-```java
+[source,java]
+----
 public interface UserRepository extends CrudRepository<UserInfo, String> {
 
   /**
@@ -167,37 +182,40 @@ public interface UserRepository extends CrudRepository<UserInfo, String> {
   @Query
   List<UserInfo> findByLastnameEqualsIgnoreCaseAndFirstnameStartsWithAndIsAdultTrue(String lastName, String fnamePrefix);
 }
-```
+----
 
-For instance, calling `find...("Locke", "J")` will get resolved to this N1QL WHERE clause (similar to SQL):
+For instance, calling `find...(&quot;Locke&quot;, &quot;J&quot;)` will get resolved to this N1QL WHERE clause (similar to SQL):
 
-```sql
+[source,sql]
+----
 ...WHERE LOWER(lastname) = LOWER("Locke") AND firstname LIKE "J%" AND isAdult = TRUE;
-```
+----
 
 You can alternatively write the statement yourself inside the `@Query` annotation, using the `$SELECT_ENTITY$`
 placeholder to make sure all necessary fields and metadata are selected by N1QL:
 
-```java
+[source,java]
+----
 @Query("$SELECT_ENTITY$ WHERE firstname LIKE "%ck%")
 List<UserInfo> findPatrickAndJackAmongOthers();
 
 @Query("$SELECT_ENTITY$ WHERE firstname LIKE $1")
 List<UserInfo> findUsersWithTheirFirstnameLike(String likePattern);
-```
+----
 
 N1QL needs at least a generic purpose `N1QL primary index` to work with, and can make use of a more entity
 type-specific `N1QL secondary index`. You can create both automatically (provided you are confident this
 is not to much of a cost) by annotating a repository with `@N1qlPrimaryIndexed` and/or `@N1qlSecondaryIndexed`. 
 
-## Using The Repository
+== Using The Repository
 
 Extending `CrudRepository` causes CRUD methods being pulled into the interface so that you can easily save and find
 single entities and collections of them.
 
 You can have Spring automatically create a proxy for the interface by using the following JavaConfig:
 
-```java
+[source,java]
+----
 @Configuration
 @EnableCouchbaseRepositories
 public class Config extends AbstractCouchbaseConfiguration {
@@ -217,12 +235,13 @@ public class Config extends AbstractCouchbaseConfiguration {
 		return "";
 	}
 }
-```
+----
 
 This sets up a connection to a Couchbase cluster and enables the detection of Spring Data repositories (through
 `@EnableCouchbaseRepositories`). The same configuration would look like this in XML:
 
-```xml
+[source,xml]
+----
 <couchbase:cluster id="cb-first">
   <couchbase:node>localhost</couchbase:node>
 </couchbase:cluster>
@@ -232,11 +251,12 @@ This sets up a connection to a Couchbase cluster and enables the detection of Sp
 <couchbase:template id="cb-template-first"  bucket-ref="cb-bucket-first" />
 
 <couchbase:repositories couchbase-template-ref="cb-template-first" />
-```
+----
 
 This will find the repository interface and register a proxy object in the container. You can use it as shown below:
 
-```java
+[source,java]
+----
 @Service
 public class MyService {
 
@@ -258,23 +278,48 @@ public class MyService {
     List<UserInfo> allJacksons = userRepository.findByLastname("Jackson");
   }
 }
-```
+----
 
+== Running CI tasks locally
 
-## Contributing to Spring Data
+Since this pipeline is purely Docker-based, it's easy to:
+
+* Debug what went wrong on your local machine.
+* Test out a a tweak to your `test.sh` script before sending it out.
+* Experiment against a new image before submitting your pull request.
+
+All of these use cases are great reasons to essentially run what the CI server does on your local machine.
+
+IMPORTANT: To do this you must have Docker installed on your machine.
+
+1. `docker run -it --mount type=bind,source="$(pwd)",target=/spring-data-couchbase-github  -v /usr/bin/docker:/usr/bin/docker -v /var/run/docker.sock:/var/run/docker.sock adoptopenjdk/openjdk8:latest /bin/bash`
++
+This will launch the Docker image and mount your source code at `spring-data-couchbase-github`.
++
+2. `cd spring-data-couchbase-github`
++
+Next, test everything from inside the container:
++
+3. `./mvnw -Pci clean dependency:list test -Dsort -B` (or whatever test configuration you must use)
+
+Since the container is binding to your source, you can make edits from your IDE and continue to run build jobs.
+
+NOTE: Docker containers can eat up disk space fast! From time to time, run `docker system prune` to clean out old images.
+
+== Contributing to Spring Data
 
 Here are some ways for you to get involved in the community:
 
-* Get involved with the Spring community on Stack Overflow.  Please help out on the
-  [`spring-data`](https://stackoverflow.com/questions/tagged/spring-data) and
-  [`spring-data-couchbase`](https://stackoverflow.com/questions/tagged/spring-data-couchbase) tags by responding to
-  questions.
-* Create [JIRA](https://jira.spring.io/browse/DATACOUCH) `DATACOUCH` tickets for bugs and new features and comment and
-  vote on the ones that you are interested in.
+* Get involved with the Spring community on Stack Overflow. Please help out on the
+ https://stackoverflow.com/questions/tagged/spring-data[`spring-data`] and
+ https://stackoverflow.com/questions/tagged/spring-data-couchbase[`spring-data-couchbase`] tags by responding to
+ questions.
+* Create https://jira.spring.io/browse/DATACOUCH[JIRA] `DATACOUCH` tickets for bugs and new features and comment and
+ vote on the ones that you are interested in.
 * Github is for social coding: if you want to write code, we encourage contributions through pull requests from
-  [forks of this repository](https://help.github.com/forking/). If you want to contribute code this way, please reference
-  a JIRA ticket as well covering the specific issue you are addressing.
-* Watch for upcoming articles on Spring by [subscribing](https://assets.spring.io/drupal/node/feed.xml) to spring.io RSS feed.
+ https://help.github.com/forking/[forks of this repository]. If you want to contribute code this way, please reference
+ a JIRA ticket as well covering the specific issue you are addressing.
+* Watch for upcoming articles on Spring by https://assets.spring.io/drupal/node/feed.xml[subscribing] to spring.io RSS feed.
 
-Before we accept a non-trivial patch or pull request we will need you to [sign the Contributor License Agreement](https://cla.pivotal.io/sign/spring). Signing the contributor’s agreement does not grant anyone commit rights to the main repository, but it does mean that we can accept your contributions, and you will get an author credit if we do. If you forget to do so, you'll be reminded when you submit a pull request. Active contributors might be asked to join the core team, and given the ability
+Before we accept a non-trivial patch or pull request we will need you to https://cla.pivotal.io/sign/spring[sign the Contributor License Agreement]. Signing the contributor’s agreement does not grant anyone commit rights to the main repository, but it does mean that we can accept your contributions, and you will get an author credit if we do. If you forget to do so, you'll be reminded when you submit a pull request. Active contributors might be asked to join the core team, and given the ability
 to merge pull requests.
