No more getBucketPassword

--- a/src/main/asciidoc/configuration.adoc
+++ b/src/main/asciidoc/configuration.adoc
@@ -70,7 +70,7 @@ public class Config extends AbstractCouchbaseConfiguration {
     }
 
     @Override
-    protected String getBucketPassword() {
+    protected String getPassword() {
         return "";
     }
 }
