--- a/src/main/asciidoc/reactiverepository.adoc
+++ b/src/main/asciidoc/reactiverepository.adoc
@@ -85,7 +85,7 @@ class ApplicationConfig extends AbstractReactiveCouchbaseConfiguration {
   }
 
   @Override
-  protected String getBucketPassword() {
+  protected String getPassword() {
  	return "";
  }
 }
