--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.2.1.RELEASE (2019-11-04)
+---------------------------------------------
+* DATACOUCH-483 - Javadoc not deployed.
+* DATACOUCH-481 - Release 3.2.1 (Moore SR1).
+
+
 Changes in version 3.1.12.RELEASE (2019-11-04)
 ----------------------------------------------
 * DATACOUCH-480 - Release 3.1.12 (Lovelace SR12).
