DATACOUCH-490 - Updated changelog.

--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.1.14.RELEASE (2019-12-04)
+----------------------------------------------
+* DATACOUCH-490 - Release 3.1.14 (Lovelace SR14).
+
+
 Changes in version 3.2.2.RELEASE (2019-11-18)
 ---------------------------------------------
 * DATACOUCH-488 - Release 3.2.2 (Moore SR2).
@@ -942,3 +947,4 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
