--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.1.15.RELEASE (2020-01-15)
+----------------------------------------------
+* DATACOUCH-498 - Update copyright years to 2020.
+* DATACOUCH-493 - Release 3.1.15 (Lovelace SR15).
+
+
 Changes in version 3.2.3.RELEASE (2019-12-04)
 ---------------------------------------------
 * DATACOUCH-492 - Upgrade to Couchbase Driver 2.7.10.
@@ -953,5 +959,6 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
