--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,17 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 4.0.0.M1 (2020-01-16)
+----------------------------------------
+* DATACOUCH-499 - Bump Major version to 4.0.0.
+* DATACOUCH-498 - Update copyright years to 2020.
+* DATACOUCH-492 - Upgrade to Couchbase Driver 2.7.10.
+* DATACOUCH-489 - Enable JDK 11+ builds.
+* DATACOUCH-485 - Migrate tests to AssertJ.
+* DATACOUCH-483 - Javadoc not deployed.
+* DATACOUCH-482 - Release 4.0 M1 (Neumann).
+
+
 Changes in version 3.2.4.RELEASE (2020-01-15)
 ---------------------------------------------
 * DATACOUCH-498 - Update copyright years to 2020.
@@ -965,6 +976,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
