DATACOUCH-502 - Updated changelog.

--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 4.0.0.M2 (2020-01-17)
+----------------------------------------
+* DATACOUCH-502 - Release 4.0 M2 (Neumann).
+
+
 Changes in version 4.0.0.M1 (2020-01-16)
 ----------------------------------------
 * DATACOUCH-499 - Bump Major version to 4.0.0.
@@ -976,6 +981,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
