--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 4.0.0.M4 (2020-03-11)
+----------------------------------------
+* DATACOUCH-511 - Upgrade to Couchbase Driver 2.7.13.
+* DATACOUCH-506 - Release 4.0 M4 (Neumann).
+
+
 Changes in version 3.2.5.RELEASE (2020-02-26)
 ---------------------------------------------
 * DATACOUCH-505 - Update Couchbase SDK to 2.7.12.
@@ -998,6 +1004,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
