--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,13 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 4.0.0.RC1 (2020-03-31)
+-----------------------------------------
+* DATACOUCH-512 - Release 4.0 RC1 (Neumann).
+* DATACOUCH-510 - Restore separate configuration with only Spring Data infrastructure.
+* DATACOUCH-504 - Support Couchbase Java SDK 3.
+
+
 Changes in version 3.2.6.RELEASE (2020-03-25)
 ---------------------------------------------
 * DATACOUCH-511 - Upgrade to Couchbase Driver 2.7.13.
@@ -1010,6 +1017,7 @@ Release Notes - Spring Data Couchbase - Version 1.0 M1 - 2013-09-11
     * [DATACOUCH-8] - Overhaul README with uptodate information
     * [DATACOUCH-9] - Add View query support to the Template
     * [DATACOUCH-10] - Upgrade parent pom to 1.1.0.RELEASE
+
 
 
 
